# Linear-Prediction-Model

./: .gitignore  CrossCorelation.py  CrossCorrelation.py  Dev.ipynb  Procfile  Procfile.txt  README.md  Tugas.py  backend_linear_prediction.py  frontend_linear_prediction.py  pyproject.toml  recorded.txt  requirements.txt  requirements.txt.txt  setup.sh
