[tool.poetry]
name = "linear-prediction-model"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <adityawardianto.19073@mhs.its.ac.id>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
streamlit = "^1.0.0"
pandas = "^1.3.3"
plotly = "^5.3.1"
numpy = "^1.21.2"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
